<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_category_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_username"/>
        <EditText
            android:id="@+id/user_username_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_name"/>
        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_category_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_address"/>
        <EditText
            android:id="@+id/user_address_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_category_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_phone"/>
        <EditText
            android:id="@+id/user_phone_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_category_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_email"/>
        <EditText
            android:id="@+id/user_email_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_category_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_password"/>
        <EditText
            android:id="@+id/user_password_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/insert_photo_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="imagem de perfil"/>

    <Button
        android:id="@+id/create_new_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Criar perfil"/>
    </LinearLayout>

</LinearLayout>