<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/pizza_number_and_dough"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/order_summary_pizza_number"
                android:textColor="#2B3D4D"/>

            <TextView
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:id="@+id/pizza_ingredients"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/order_summary_ingredients"
                android:textColor="#AEB6BD"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <TextView
                android:layout_marginTop="12dp"
                android:paddingRight="5dp"
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint_text_price"
                android:textSize="20sp"
                android:textColor="#AEB6BD"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/quantity_order_summary"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="Quantidade"
                android:textAlignment="center"/>
        </LinearLayout>
        />
    </RelativeLayout>
</LinearLayout>